--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6649],[],[[4,0,0,[],[1,309,6339],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,78772],[[4,5,6,0,[],[1,522,11272],[],[[7,0,0,[],[1,537,11255],[]]],[],[1,1,0,0]],[8,9,10,0,[],[1,11796,66974],[],[[11,0,0,[],[1,11811,11698],[]],[12,0,0,[],[1,23512,11221],[]],[13,0,0,[],[1,34735,11057],[]],[14,0,0,[],[1,45793,11056],[]],[15,0,0,[],[1,56852,11012],[]],[16,0,0,[],[1,67865,10904],[]]],[],[6,6,0,0]]],[],[],[7,7,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Selecionar Produto","*c:\\iterasys\\RobotSauceDemo140\\tests\\web\\selecionar_produto.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20s8sSS1KLK4s1g/KT8ovCU4sTU51Sc3NNzQx0C9JLS4p1i9PTdIvTs1JTc7Mz0ssii8oyk8pLcnXKwIpV7Kjlkk2+ol2AJ6tOYA=","*Selecionar Sauce Labs Backpack"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Po","*C:\\iterasys\\RobotSauceDemo140\\tests\\web\\po","*tests/web/po","*Selecionar Produto Po","*C:\\iterasys\\RobotSauceDemo140\\tests\\web\\po\\selecionar_produto_po.robot","*tests/web/po/selecionar_produto_po.robot","*Selecionar Mochila","*Selecionar Produto Po Ddt","*C:\\iterasys\\RobotSauceDemo140\\tests\\web\\po\\selecionar_produto_po_ddt.robot","*tests/web/po/selecionar_produto_po_ddt.robot","*TC001","*TC002","*TC003","*TC004","*TC005","*TC006"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Selecionar Produto","name":"Selecionar Produto","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:18","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:01:19","fail":0,"id":"s1","label":"Po","name":"Po","pass":7,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Po.Selecionar Produto Po","name":"Selecionar Produto Po","pass":1,"skip":0},{"elapsed":"00:01:07","fail":0,"id":"s1-s2","label":"Po.Selecionar Produto Po Ddt","name":"Selecionar Produto Po Ddt","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1738117848119;
+window.output["baseMillis"] = 1738519015755;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6672;
+window.output["generated"] = 78847;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
